<resources>
    <string name="app_name_cap">EVENTED</string>
    <string name="event_name">Event Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="event_date">Event Date</string>
    <string name="location">Location</string>
    <string name="venue">Venue</string>
    <string name="publicity">Event visibility</string>
    <string name="description">Description</string>
    <string name="create_event">Create Event</string>
    <string name="next">NEXT</string>
    <string name="billing_information">Billing Information</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Phone No.</string>
    <string name="account_phone_number_explanation">Mobile money phone number</string>
    <string name="account_name_explanation">This is your mobile money account name</string>
    <string name="attendance_cap">ATTENDANCE</string>
    <string name="enterance_fee">Entrance Fee in cedis</string>
    <string name="amount_in_cedis">Amount in cedis</string>
    <string name="available_seats">Available seats</string>
    <string name="no_event">No event available</string>
    <string name="completely_public_explanation">Everyone can see and invite guests to this event</string>
    <string name="folder_name_files">Evented</string>
    <string name="error_event_required">Event name is required</string>
    <string name="error_location_requred">Location required</string>
    <string name="error_description_requred">Description required</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="ends_at">Ends On</string>
    <string name="starts_from">Starts From</string>
    <string name="error_start_date_required">Start date not set</string>
    <string name="error_start_date_past">Start date is in the past</string>
    <string name="error_end_date_required">End date is not set</string>
    <string name="error_end_date_before_start">End date can\'t come before start date</string>
    <string name="invalid_num">Invalid number</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="error_phone_required">Your account phone number is required</string>
    <string name="err_name_required">Your official account name is required</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">This week</string>
    <string name="this_month">This Month</string>
    <string name="next_month">Next month</string>
    <string name="later">Later</string>
    <string name="flyer">flyer</string>
    <string name="see_all">See All</string>
    <string name="attending">%d of %d tickets sold</string>
    <string name="extra_information">Extra Information</string>
    <string name="purchase_ticket_instruction">Provide your mobile money number and click book now</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="add_more">Add more</string>
    <string name="buy_for">Buy for</string>
    <string name="error">Error</string>
    <string name="booking_ticket">Booking ticket</string>
    <string name="error_no_billing_account_number">Provide your mobile money billing account number</string>
    <string name="error_ticket_onwer">Provide phone number of ticket owner</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_instruaction">First authorize the transaction,  then enter the verification code we sent you to complete the process</string>
    <string name="verify_and_book">Verify &amp; book</string>
    <string name="error_verification_code">Verification code not complete</string>
    <string name="initialising_transaction">Initialising transaction</string>
    <string name="qr_code">QR code</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="ticket_cost">Ticket Cost %s</string>
    <string name="starts_at">Event starts at %s</string>
    <string name="purchased_on">Purchased on: %s</string>
    <string name="ticket_no">Ticket No. %d</string>
    <string name="back">back</string>
    <string name="search">search</string>
    <string name="search_hint">Search...</string>
    <string name="search_suggestions">Suggestions</string>
    <string name="date_aunavialable">date unavailable</string>
    <string name="view_tickets">View Tickets</string>
    <string name="tickets_list">%s - tickets</string>
    <string name="view_ticket">View tickets</string>
    <string name="view_event_details">View details</string>
    <string name="set_a_reminder">Set reminder</string>
    <string name="my_events">My Events</string>
    <string name="verify_nfc">Use NFC</string>
    <string name="verify_qrcode">Scan QR Code</string>
    <string name="going">Going</string>
    <string name="verify_tickets">Verify tickets</string>
    <string name="update_event">View event details</string>
    <string name="manage_events">Manage Events</string>
    <string name="verify_tickets_title">Verify Tickets</string>
    <string name="instructions">Instructions</string>
    <string name="nfc_instructions">1. Turn on NFC on both devices \n2. Bring your devices closer such that they touch each other \n3. Wait few seconds to get the ticket verified</string>
    <string name="qr_code_instructions">1. Have the ticket bearer open the ticket details screen \n2. Focus the camera on the QR Code. \n3. Wait few seconds to get the ticket verified</string>
    <string name="scanning_nearby_devices">Scanning for nearby devices...</string>
    <string name="verify_ticket_with_nfc">Verify with NFC</string>
    <string name="no_nfc">No NFC available on this device, would you like to enable it in settings?</string>
    <string name="date">Date %s</string>
    <string name="no_event_created">You havn\'t  created any event yet</string>
    <string name="no_tickets_purchased_yet">No tickets purchased yet :-)</string>
    <string name="spread_the_word">Spread The Word</string>
    <string name="open_after_export">Open exported file after export</string>
    <string name="export_instructions">Welcome to ticket exporter, easily export your tickets to a Microsoft excel spreadsheet.</string>
    <string name="begin_export">Begin Export</string>
    <string name="export_to_excel">Export To Excel</string>
    <string name="export">Export</string>
    <string name="cancel_export">Cancel Export</string>
    <string name="preparing_to_export">Preparing tickets...</string>
    <string name="export_progress">Export progress %s</string>
    <string name="exproted_success_message">Successfully exported tickets to %s</string>
    <string name="ticket_veriefied_successfully">ticket_verified</string>
    <string name="ticket_verified_success_message">Ticket verified successfully, tap to scan again</string>
    <string name="ticket_verified_failed_message">Failed: %s. Tap to scan again</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_started">Get Started</string>
    <string name="phone_required">Phone number is required</string>
    <string name="skip">Skip</string>
    <string name="login_intro">You need to add your phone number in order to buy a ticket, view tickets or create an  event</string>
    <string name="add_phone">Add Phone Number</string>
    <string name="verify">Verify</string>
    <string name="verification_notice">You\'ll shortly receive the verification code in your inbox. Make sure you have a working SMS plan</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="title_verify_phone">Verify Phone Number</string>
    <string name="title_add_phone_number">Add Phone Number</string>
    <string name="welcome">Welcome</string>
    <string name="i_know">I know</string>
    <string name="overused_ticket_warning">Warning: This ticket has been verified before</string>
    <string name="contact_info">Contact Information</string>
    <string name="event_website">Event website (optional)</string>
    <string name="contact_phone_hint">Contact No.</string>
    <string name="contact_required">Contact number is required</string>
    <string name="contact_hint">You can add multiple no\'s by separating them with commas</string>
    <string name="top_highlights">trending</string>
    <string name="contact_organizer">Contact Organizer</string>
    <string name="get_directions">Get directions</string>
    <string name="add_flyer">Tap to add a flyer</string>
    <string name="failed_to_load_flyer">Failed to load flyer</string>
    <string name="open_file">Open file</string>
    <string name="no_app_for_view_file_type">No app for viewing this file type</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="ticket_class">Ticket Type %s</string>
    <string name="ticket_type">Ticket type</string>
    <string name="seats">Seats</string>
    <string name="cost">Cost</string>
    <string name="add_ticket_type">Add Ticket Type</string>
    <string name="cant_be_empty">cann\'t be empty</string>
    <string name="advanced_ticketing">Advanced Ticketing</string>
    <string name="done">Done</string>
    <string name="ticket_type_updated">Ticket types updated</string>
    <string name="ticket_required">You haven\'t selected your ticket</string>
    <string name="choose_ticket">Choose Your Ticket</string>
    <string name="contact">Contact</string>
    <string name="visit_site">Visit site</string>
    <string name="nearby_events">Nearby Events</string>
    <string name="you">You</string>
    <string name="loading_location">Getting location</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="trending_events">Trending Events</string>
    <string name="invalid_verification_code">Invalid verification code</string>
</resources>
