<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_flyer_height"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_event_flyer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/flyer"
            android:scaleType="fitXY"
            tools:src="@drawable/flyer2" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#5fff"
            android:hint="@string/event_name"
            android:inputType="text"
            android:paddingBottom="@dimen/default_gap"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/default_gap"
            android:textColor="@color/white"
            android:textColorHint="#eee" />


        <TextView
            android:id="@+id/tv_add_flyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="@dimen/default_gap"
            android:drawableTop="@drawable/ic_add_a_photo_black_24dp"
            android:focusable="true"
            android:padding="@dimen/default_gap"
            android:text="@string/add_flyer"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white" />

    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:useDefaultMargins="true">

            <android.support.v4.widget.Space
                android:layout_height="@dimen/default_gap"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <TextView
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_clock_gray_24dp"
                android:drawablePadding="@dimen/default_gap"
                android:gravity="center_vertical"
                android:text="@string/event_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <TextView
                style="@style/create_event_grid_item_style"
                android:text="@string/starts_from"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_columnWeight="1" />

            <TextView
                style="@style/create_event_grid_item_style"
                android:text="@string/ends_at"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/start_date"
                style="@style/create_event_grid_item_style.date_style"
                android:drawablePadding="@dimen/default_gap"
                android:drawableRight="@drawable/ic_edit_18dp"
                android:text="@string/start_date"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/end_date"
                style="@style/create_event_grid_item_style.date_style"
                android:drawablePadding="@dimen/default_gap"
                android:drawableRight="@drawable/ic_edit_18dp"
                android:text="@string/end_date"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/start_time"
                style="@style/create_event_grid_item_style.date_style"
                android:drawablePadding="@dimen/default_gap"
                android:drawableRight="@drawable/ic_edit_18dp"
                android:text="@string/start_time"
                app:layout_columnWeight="1" />

            <TextView
                android:id="@+id/end_time"
                style="@style/create_event_grid_item_style.date_style"
                android:drawablePadding="@dimen/default_gap"
                android:drawableRight="@drawable/ic_edit_18dp"
                android:text="@string/end_time"
                app:layout_columnWeight="1"
                app:layout_gravity="center_horizontal" />


            <android.support.v4.widget.Space
                android:layout_height="@dimen/default_gap"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <View
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/location"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_location_on_black_24dp"
                android:drawablePadding="@dimen/default_gap"
                android:gravity="center_vertical"
                android:hint="@string/venue"
                android:inputType="text"
                android:lines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                tools:ignore="RtlHardcoded" />


            <View
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <android.support.v4.widget.Space
                android:layout_height="@dimen/default_gap"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/description"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/ic_event_note_black_24dp"
                android:drawablePadding="@dimen/default_gap"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />


            <View
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <android.support.v4.widget.Space
                app:layout_columnSpan="2"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_gray"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/next"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawablePadding="@dimen/default_gap"
                android:drawableRight="@drawable/ic_chevron_right_color_primary_24dp"
                android:gravity="end|center_vertical"
                android:text="@string/next"
                android:textColor="@color/colorPrimaryDark"
                app:layout_columnSpan="2"
                app:layout_columnWeight="1" />
        </android.support.v7.widget.GridLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
