<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/create_event_grid_item_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/default_gap">


        <TextView
            android:id="@+id/et_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:hint="@string/event_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColorHint="@color/light_gray" />
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/ic_payment_black_24dp"
        android:drawablePadding="@dimen/default_gap"
        android:gravity="center_vertical"
        android:text="@string/billing_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:ignore="RtlHardcoded" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/default_gap"
        android:hint="@string/account_name"
        android:inputType="text" />

    <TextView
        android:id="@+id/account_name_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/account_name_explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/ic_phonelink_lock_black_24dp"
        android:drawablePadding="@dimen/default_gap"
        android:hint="@string/account_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/et_phone_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/account_phone_number_explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_gap" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_gap"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/create_event" />
</LinearLayout>
