<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/export_instructions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary" />

    <CheckBox
        android:id="@+id/cb_open_after_export"
        style="check"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/default_gap"
        android:text="@string/open_after_export"
        android:textColor="@color/colorPrimary" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <Button
        android:id="@+id/begin_export"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/begin_export"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
